# pytube

./: .bumpversion.cfg  .coveragerc  .deepsource.toml  .editorconfig  .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES.rst  CODE_OF_CONDUCT.md  COPYING  CVE-2019-13272.c  Contributing.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  TODO  calculate_excel_time.py  codecov.yml  exploit  gui.py  pytest.ini  release  requirements.txt  setup.cfg  setup.py  sort_by_num.py  test.py  testdl.py  tst-only  youtube.py
docs/: Makefile  api.rst  commandline_interface.rst  conf.py  index.rst  make.bat
example/: playlist.py
images/: Github Social.sketch  pytube-logo.sketch
pytube/: __init__.py  __main__.py  api.py  batch.py  cache.py  captions.py  cipher.py  cli.py  compat.py  continuation.py  download.py  exceptions.py  extract.py  helpers.py  innertube.py  itags.py  jsinterp.py  logging.py  metadata.py  mixins.py  models.py  monostate.py  parser.py  playlist.py  query.py  request.py  streams.py  tinyjs.py  utils.py  version.py
scripts/: pytube  pytubectl
tests/: __init__.py  conftest.py  generate_fixture.py  mock_video.html  mytest.py  requirements.txt  test.py  test_batch.py  test_captions.py  test_cipher.py  test_cli.py  test_download.py  test_exceptions.py  test_extract.py  test_functional.py  test_helpers.py  test_itags.py  test_main.py  test_metadata.py  test_mixins.py  test_p3_pytube.py  test_parser.py  test_playlist.py  test_playlist_callbacks.py  test_pytube.py  (+7 more)
(+42 files in other folders)
