[metadata]
description-file = README.md

[nosetests]
verbosity=1
detailed-errors=1
with-coverage=1
cover-package=pytube
debug=nose.loader
pdb=0
pdb-failures=0

[bumpversion]
commit = True
tag = True
current_version = 6.2.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize =
    {major}.{minor}.{patch}

[bumpversion:file:setup.py]

[bumpversion:file:pytube/__init__.py]

