[bumpversion]
commit = True
tag = True
current_version = 9.5.3
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:pytube/__init__.py]

[coverage:run]
source = pytube
omit = 
	pytube/compat.py

[flake8]
ignore = W605

